Only to transfer events from shelf item to its context menu for MENU_SOURCE_TOUCH type.

The flag |send_gesture_events_to_owner_| is used to transfer gesture events
from shelf item to its context menu. And will only be reset in
MenuController::OnGestureEvent. Should check the MenuSourceType before set
the flag.

Bug: 768104
Change-Id: Iec542bbad1c0ed277591caad82f874b54c756a6b
Reviewed-on: https://chromium-review.googlesource.com/679926
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Commit-Queue: min c <minch@chromium.org>
Cr-Commit-Position: refs/heads/master@{#504097}
Former-commit-id: ebd65079fd07b9d9b793a3f96e5fd6656667ccd4